# financial_researcher_crewai

./: README.md  pyproject.toml  requirements.txt
output/: report.md
src/financial_researcher_crewai/: main.py
