[project]
name = "financial_researcher_crewai"
version = "0.1.0"
description = "financial_researcher_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1",
    "lancedb==0.30.0"
]

[project.scripts]
financial_researcher_crewai = "financial_researcher_crewai.main:run"
run_crew = "financial_researcher_crewai.main:run"
train = "financial_researcher_crewai.main:train"
replay = "financial_researcher_crewai.main:replay"
test = "financial_researcher_crewai.main:test"
run_with_trigger = "financial_researcher_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
